@@ -198,7 +198,7 @@ nostdinc
 D
 Do not search standard system include directories
 
-static_libphobos
+static-libphobos
 Driver
 Link the standard D library statically in the compilation.
 
